<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="15dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="3dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/task_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/o"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="#444444"
                android:textSize="20sp"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_gravity="center"
                android:visibility="visible"
                app:buttonTint="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/centerContent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:id="@+id/task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/task_name"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/task_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_date"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_time"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/task_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_desc"
                android:textSize="16sp"
                android:typeface="sans" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>