<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1E1D25">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_task_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/close"
                android:onClick="closeAddTask"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_action_close" />

            <TextView
                android:id="@+id/toolbar_task_add_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:gravity="center|start"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="4dp"
                android:paddingRight="4dp"
                android:text="@string/create"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/toolbar_task_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete"
                android:visibility="invisible"
                android:onClick="deleteTask"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_action_delete" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/done"
                android:onClick="doneAddTask"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_action_done" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar_task_add"
        android:background="#1E1D23"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <EditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/task"
            android:inputType="text"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#CCCCCC" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D2D2D2"/>

        <EditText
            android:id="@+id/task_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/task_date"
            android:padding="12dp"
            android:focusable="false"
            android:background="@android:color/white"
            android:ems="10"
            android:singleLine="true"
            android:textColorHint="#CCCCCC"
            android:textColor="#666666"
            android:onClick="showStartDatePicker"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D2D2D2"/>

        <EditText
            android:id="@+id/task_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/task_time"
            android:padding="12dp"
            android:focusable="false"
            android:background="@android:color/white"
            android:ems="10"
            android:singleLine="true"
            android:textColorHint="#CCCCCC"
            android:textColor="#666666"
            android:onClick="showStartTimePicker"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D2D2D2"/>

        <EditText
            android:id="@+id/task_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/task_desc"
            android:inputType="text"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#CCCCCC" />
    </LinearLayout>
</RelativeLayout>